# stock-alpha

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
apps/engine/: Dockerfile  pyproject.toml
apps/engine/engine/: __init__.py  cli.py  config.py  db.py  db_direct.py  freshness.py  liquidity.py  logging.py  scheduler.py  timeutil.py
apps/engine/engine/backtest/: __init__.py  costs.py  cross_section.py  event_backtest.py  gate.py  intraday_backtest.py  metrics.py  runner.py
apps/engine/engine/executor/: __init__.py
apps/engine/engine/factors/: __init__.py  compose.py  factors.py  normalize.py  runner.py
apps/engine/engine/flow/: __init__.py
apps/engine/engine/fundamental/: __init__.py  dcf.py  periods.py  ratios.py  relative.py  runner.py
apps/engine/engine/ingest/: __init__.py  base.py  dart.py  (+8 more)
apps/engine/scripts/: bt_sigma_kalman.py  diag_backtest_edge.py  diag_core_candidates.py  diag_cost_styles.py  diag_factor_ic.py  diag_pick_gate_impact.py  diag_pick_track.py  diag_playbook_breakdown.py  diag_r_dist.py  diag_scaleout.py
apps/engine/tests/: test_backtest.py  test_costs.py  test_cross_section.py  test_daily.py  test_disclosure_class.py  test_factor_signals.py  test_factors.py  test_freshness.py  test_fundamental.py  test_indicators.py  test_ingest_dart.py  test_ingest_krx.py  test_ingest_naver.py  test_ingest_retry.py  test_intraday_backtest.py  test_levels.py  test_liquidity.py  test_market.py  test_normalize.py  test_pead.py  test_periods.py  test_playbooks_new.py  test_reports.py  test_signals.py  test_universe.py
(+179 files in other folders)
