[project]
name = "stock-alpha-engine"
version = "0.1.0"
description = "Stock-Alpha 분석·인제스트·리포트 엔진"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "httpx>=0.27",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "pandas-ta>=0.3.14b0",
  "supabase>=2.5",
  "python-dotenv>=1.0",
  "tenacity>=8.3",
  "structlog>=24.1",
  # 데이터 소스
  "yfinance>=0.2.40",
  "pykrx>=1.0.45",
  # 리포트
  "anthropic>=0.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
engine = "engine.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
